fixes spacing of buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7885,7 +7885,7 @@ select.list-dt:focus {
 
 @media screen and (max-width: 575px) {
   #otp-modal .otp-boxes {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 }
 
